--- a/PRJ01 Conecta/Global Archives/Paginas Primarias/selec-TipoCadastro/sel-TipoCad.css
+++ b/PRJ01 Conecta/Global Archives/Paginas Primarias/selec-TipoCadastro/sel-TipoCad.css
@@ -13,6 +13,11 @@ html, body {
     background: linear-gradient(135deg, #f3f3f3, #e2e2e2);
 }
 
+a{
+    color: #fff;         /* Define a cor do link */
+    text-decoration: none;  /* Remove o sublinhado */
+}
+
 .container {
     display: flex;
     gap: 40px; /* Espaçamento aumentado entre os botões */
@@ -80,39 +85,4 @@ h2 {
 
 .profissional:hover {
     background-color: #ffc900;
-}
-
-/* Container dos formulários */
-.form-container {
-    margin-top: 20px;
-    text-align: center;
-}
-
-.form-container form {
-    display: inline-block;
-    background-color: #f9f9f9;
-    padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
-}
-
-input {
-    margin: 10px 0;
-    padding: 10px;
-    width: 80%;
-    border-radius: 5px;
-    border: 1px solid #ccc;
-}
-
-button {
-    padding: 10px 20px;
-    border: none;
-    border-radius: 5px;
-    background-color: #007BFF;
-    color: white;
-    cursor: pointer;
-}
-
-button:hover {
-    background-color: #0056b3;
 }
