--- a/PRJ01 Conecta/Front-end/lista denuncias/ListaDenuncias.css
+++ b/PRJ01 Conecta/Front-end/lista denuncias/ListaDenuncias.css
@@ -13,6 +13,11 @@ body {
     align-items: center;
     min-height: 100vh;
 }
+.motivo-textarea{
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 50px;
+}
 
 .container {
     width: 100%;
@@ -93,7 +98,7 @@ h1 {
     background-color: #2980b9;
 }
 
-/* Estilos para o pop-up */
+
 .popup {
     display: none;
     position: fixed;
@@ -135,3 +140,15 @@ h1 {
 
     
 }
+.pesquisa-container {
+    margin-bottom: 15px;
+}
+
+.barra-pesquisa {
+    width: 100%;
+    padding: 10px;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+
