--- a/PRJ01 Conecta/Front-end/lista denuncias/ListaDenuncias.css
+++ b/PRJ01 Conecta/Front-end/lista denuncias/ListaDenuncias.css
@@ -5,6 +5,65 @@
     box-sizing: border-box;
     font-family: Arial, sans-serif;
 }
+.top-bar {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    background-color: #ffc800;
+    padding: 10px; 
+    color: white;
+    top: 0;
+    position: fixed;
+}
+.user-profile {
+    display: flex;
+    align-items: center;
+}
+
+.user-profile span {
+    margin-right: 480px;
+    font-size: 16px;
+}
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropbtn {
+    background-color: #ffc800;
+    color: white;
+    border: none;
+    cursor: pointer;
+    font-weight: bold;
+    padding-right: 30px;
+
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: white;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown-content a:hover {
+    background-color: #ddd;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
 
 body {
     background-color: #f4f4f9;
@@ -18,6 +77,92 @@ body {
     justify-content: center;
     margin-bottom: 50px;
 }
+footer {
+    width: 100%;
+    height: 50px;
+    margin: auto;
+    bottom: 0;
+    background-color: #2e2d2d;
+    
+    padding: 10px 0px; /* Tamanho da largura do Footer */
+    
+    position:fixed ;
+    margin-top: 18px;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    text-align: center;
+  }
+  .footer-content {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 20px;
+  }
+  
+  .footer-left,
+  .footer-center,
+  .footer-right {
+    flex: 1;
+  }
+  
+  .footer-left {
+    text-align: left;
+    padding-top: 18px;
+  }
+  
+  .footer-center {
+    text-align: center;
+    padding-top: 5px;
+  }
+  
+  .footer-right {
+    text-align: right;
+    padding-top: 18px;
+  }
+  
+  /* Estilo dos links no rodapé */
+  .footer-links a {
+    color: #fff;
+    text-decoration: none;
+    margin: 0 5px;
+    font-size: 14px;
+  }
+  
+  .footer-links a:hover {
+    text-decoration: underline;
+  }
+  
+  /* Estilo dos ícones sociais */
+  .social-icons {
+    display: inline-block;
+  }
+  
+  .social-icons a {
+    text-decoration: none;
+    color: #fff;
+    font-size: 20px;
+    margin: 0 10px;
+    display: inline-block;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background-color: #ffc800;
+    line-height: 40px;
+    transition: background-color 0.3s ease;
+  }
+  
+  .social-icons a:hover {
+    background-color: #ffffff;
+  }
+  
+  /* Ícones Font Awesome */
+  .social-icons i {
+    vertical-align: middle;
+  }
 
 .container {
     width: 100%;
@@ -27,6 +172,62 @@ body {
     border-radius: 8px;
     padding: 20px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+.sidebar {
+    height: 100vh;
+    width: 270px;
+    height: 650px;
+    background-color: #2e2d2d;
+    color: white;
+    transition: width 0.3s ease;
+    position: fixed;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    left: 0;
+}
+
+.sidebar.closed {
+    width: 60px;
+}
+
+/* Sidebar Header with Favicon */
+.sidebar-header {
+    display: absolute;
+    align-items: left;
+    justify-content: space-between;
+    padding: 0px;
+    background-color: #2e2d2d;
+}
+
+/* Sidebar Menu */
+.sidebar a {
+    display: flex;
+    align-items: center;
+    padding: 15px;
+    text-decoration: none;
+    color: white;
+    font-size: 16px;
+    margin: 10px 0;
+    border-radius: 5px;
+    transition: background 0.3s;
+}
+
+.sidebar a i {
+    margin-right: 10px;
+    font-size: 20px;
+}
+
+.sidebar a span {
+    transition: opacity 0.3s;
+}
+
+.sidebar.closed a span {
+    opacity: 0;
+}
+
+.sidebar a:hover {
+    background-color: #ffc800;
 }
 
 h1 {
@@ -85,7 +286,7 @@ h1 {
 
 .denuncia-detalhes-btn {
     padding: 8px 15px;
-    background-color: #3498db;
+    background-color:#ffc800;
     color: #fff;
     border: none;
     border-radius: 4px;
@@ -131,7 +332,7 @@ h1 {
 .popup button {
     margin: 5px;
     padding: 8px 15px;
-    background-color: #27ae60;
+    background-color: #ffc800;
     color: white;
     border: none;
     border-radius: 5px;
