--- a/PRJ05 Trash Track/TrashTrack/web/css/style-mapa.css
+++ b/PRJ05 Trash Track/TrashTrack/web/css/style-mapa.css
@@ -82,13 +82,13 @@ body{
 
 /*Style button close - se aplica a todos os botoes de fechar dos modais*/
 
-.btn-close-perfil, .btn-close-lista, .btn-filtro, .btn-close-ranking, .btn-close-criar, .btn-close-info {
+.btn-close-perfil, .btn-close-lista, .btn-filtro, .btn-close-ranking, .btn-close-criar, .btn-close-info, .btn-close-coleta {
     background-color: #fff;
     border: none;
     float: inline-end;
 }
 
-.btn-close-perfil> img, .btn-close-lista> img, .btn-close-ranking> img, .btn-close-criar > img, .btn-close-info > img{
+.btn-close-perfil> img, .btn-close-lista> img, .btn-close-ranking> img, .btn-close-criar > img, .btn-close-info > img, .btn-close-coleta > img{
     width: 15px;
 }
 
@@ -282,6 +282,51 @@ input:checked + .slider:before {
     }
 }
 
+/* Modal Marcar ponto como coletado */
+#fadeColeta{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.6);
+    z-index: 1000;
+    display: none;
+}
+
+#modalColeta{   
+    position: fixed;
+    left: 50%;
+    top: 40%;
+    transform: translate(-50%, -50%);
+    background-color: #fff;
+    z-index: 1000;
+    width: 320px;
+    max-width: 90%;
+    padding: 24px ;
+    border-radius: 16px;
+    color:#000;
+    display: none;
+
+    
+    
+    .container-footer{
+        width: 98%;
+        margin: auto;
+        display: flex;
+        gap: 2px;
+        flex-direction: column;
+    }
+}
+
+
+#modalColeta, #fadeColeta{
+    transition: .2s;
+    opacity: 1;
+    pointer-events: all;
+}
+
+
 /*ModalLista*/
 
 #modalLista{
@@ -387,6 +432,7 @@ input:checked + .slider:before {
 
 #lista-meus{
     height: 70px;
+    visibility: hidden;
 }
 
 
@@ -581,6 +627,7 @@ input:checked + .slider:before {
     float: right;
     margin-right: 64px;
     padding: 0;
+    z-index: 2;
     
     & img{
         width: 42px;
@@ -595,7 +642,7 @@ input:checked + .slider:before {
   left: 0;
   height: 100vh;
   width: 100vw;
-  z-index: 1; /* Fica abaixo da interface */
+  z-index: -1; /* Fica abaixo da interface */
 }
 
 #interface {
