fix: Ajuste no lista de ponto "botao coletar"

--- a/PRJ05 Trash Track/TrashTrack/web/css/style-mapa.css
+++ b/PRJ05 Trash Track/TrashTrack/web/css/style-mapa.css
@@ -399,6 +399,7 @@ input:checked + .slider:before {
         border: none;
         display: inline-block; 
         text-align: center; 
+        cursor: pointer;
     }
 
     .btn-denuncia > img{
