--- a/PRJ01 Conecta/Front-end/Dash-Profissional/4.23-Agenda Profissional/agendaProfissional.css
+++ b/PRJ01 Conecta/Front-end/Dash-Profissional/4.23-Agenda Profissional/agendaProfissional.css
@@ -31,7 +31,7 @@ body {
 /* Sidebar Header with Favicon */
 .sidebar-header {
     display: flex;
-    align-items: left;
+    align-items: center;
     justify-content: space-between;
     padding: 0px;
     background-color: #2e2d2d;
